some comments and descriptions added

--- a/Company_name_.ipynb
+++ b/Company_name_.ipynb
@@ -6,7 +6,7 @@
       "name": "Company_name_",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM99R87lO6CRqgnYtpsoLgE",
+      "authorship_tag": "ABX9TyPjlYVCz33NmCPHXAiSOk13",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "# Industry By Company Name\n",
         "\n",
-        "This project is "
+        "This project is developing a machine learning model to predict the NAICS code based on the name of the company. So far it can predict the industry by 0.41 accuracy using the SGD algorithm."
       ]
     },
     {
@@ -186,6 +186,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hNE6ZAxAdzqu",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Lemmatizing the data\n",
+        "\n",
+        "In this section we used Textblob mocule to lemmatize the input text."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FiFiR5H0FokV",
@@ -238,7 +250,7 @@
       "source": [
         "### Term Frequency times inverse document frequency (TF-IDF): \n",
         "\n",
-        "We can reduce the weightage of more common words like (the, is, an etc.) which occurs in the document. "
+        "TF-IDF used to reduce the weight of most common words such as \"the\", \"a\", \"an\"."
       ]
     },
     {
@@ -278,7 +290,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Machine Learning"
+        "## Machine Learning\n",
+        "\n",
+        "SkLearn module used to create the model and predict the labels based on the features."
       ]
     },
     {
@@ -348,53 +362,6 @@
             "tags": []
           },
           "execution_count": 69
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "N1u6D5GOSK5v",
-        "colab_type": "text"
-      },
-      "source": [
-        "NAIVE Bayes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FXUZJoibSNGl",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "04ce5ce2-42bd-4867-a9ca-e75438b2e1e7"
-      },
-      "source": [
-        "from sklearn.naive_bayes import MultinomialNB\n",
-        "\n",
-        "pipeline = Pipeline([\n",
-        "    ('bow', CountVectorizer(analyzer=split_into_lemmas)),  # strings to token integer counts\n",
-        "    ('tfidf', TfidfTransformer()),  # integer counts to weighted TF-IDF scores\n",
-        "    ('classifier', MultinomialNB()),  # Naive Bayes classifier\n",
-        "])\n",
-        "\n",
-        "pipeline = pipeline.fit(train, label_train)\n",
-        "\n",
-        "predicted = pipeline.predict(test)\n",
-        "\n",
-        "print (\"Accuracy Score with MultinomialNB : \"+str(accuracy_score(label_test, predicted)))"
-      ],
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Accuracy Score with MultinomialNB : 0.25321100917431194\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -535,6 +502,17 @@
           },
           "execution_count": 86
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rHkPp6_0ec4m",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Exporting the model\n",
+        "Model exported as a Pickle fime for future use."
       ]
     },
     {
